arkts_static_test/03_Types/ets_cases/3.17.1_Readonly_Tuple_Types/cross_lang_verify/compile-pass/TYP_03_17_01_002.swift
/**
 * Swift cross-language verification for TYP_03_17_01_002_PASS_READONLY_TUPLE_LENGTH
 * Swift 元组没有直接的 length 属性
 */
import Foundation

let tuple: (Int, String, Bool) = (1, "hello", true)
let mirror = Mirror(reflecting: tuple)

if mirror.children.count != 3 { fatalError("length should be 3") }

print("verified")
